<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSevilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sevilla"
            android:text="@string/sevilla"
            app:backgroundTint="#4CAF50" />

        <Button
            android:id="@+id/buttonGranada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="granada"
            android:text="@string/granada"
            app:backgroundTint="#9C27B0" />

        <Button
            android:id="@+id/buttonCordoba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cordoba"
            android:text="@string/cordoba"
            app:backgroundTint="#FF5722" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>